--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,10 +21,7 @@
     <jhi-main>
         <div class="app-loading">
             <div class="lds-css ng-scope">
-                <div class="lds-pacman">
-                    <div><div></div><div></div><div></div></div>
-                    <div><div></div><div></div><div></div></div>
-                </div>
+                <img width="100" src="./content/images/loading.gif" alt="loading">
             </div>
         </div>
         <div class="app-loading">
